Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-20251

osd-wbcfs doesn't handle dentry pinning correctly on newer kernels

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      Swapping kill_litter_super() to kill_anon_super() removes the implicit d_genocide() that cleans up stale dentry during umount. This causes warnings and hangs during umount. Refactor osd-wbcfs to handle these changes better.

            timday Tim Day
            timday Tim Day
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: