LU-20251 osd-wbcfs: fix dentry pinning

Swapping kill_litter_super() to kill_anon_super() removes the
implicit d_genocide() that cleans up stale dentry during umount.
This causes warnings and hangs during umount. Refactor osd-wbcfs
to handle these changes better.

Fixes: 20527615330e ("LU-19837 build: Compatibility updates for kernel v6.19")
Test-Parameters: trivial
Signed-off-by: Timothy Day <timday@thelustrecollective.com>
Change-Id: Ic70a2959a0ad20c9b3ef1a2fbcbf6a66b87ec2be
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/65838
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Qian Yingjin <qian@ddn.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>